Add simple nav structure

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-     <span>LC Timeline</span>
+     <h1>mason</h1>
      <span class="spacer"></span>
+    <span class="fill-space"></span>
      <a mat-button routerLink="/register">Register</a>
      <a mat-button routerLink="/login">Login</a>
   </mat-toolbar-row>
