Add lodge-profile component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,31 @@
+<div class="container-fluid p-0">
+      <div class="row">
+            <div class="col-sm-3 col-sm-6 p-0">
+                  <button mat-flat-button class="lodge-profile text-white full">Lodge Profile</button>
+            </div>
+            <div class="col-sm-3 col-sm-6 p-0">
+                  <button mat-flat-button class="user-profile text-white full">User Profile</button>
+            </div>
+            
+            <div class="col-sm-3 col-sm-6 p-0">
+                  <button mat-flat-button class="masonic-network text-white full">Masonic Network</button>
+            </div>
+            <div class="col-sm-3 col-sm-6 p-0">
+                  <button mat-flat-button class="business-network text-white full">Business Network</button>
+            </div>
+      </div>
+</div>
+
+<app-lodge-profile></app-lodge-profile>
 
 
-      <button mat-flat-button class="lodge-profile text-white full">Lodge Profile</button>
 
-      <button mat-flat-button class="user-profile text-white full">User Profile</button>
+      
+
+      
 
 
 
-      <button mat-flat-button class="masonic-network text-white full">Masonic Network</button>
-      <button mat-flat-button class="business-network text-white full">Business Network</button>
+      
+      
 
