--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,8 @@ html, body {
     margin: 0;
     font-family: 'Raleway', sans-serif;
 }
+
+.card-image {
+    max-width: 100%;
+    height: auto;
+}
