--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-html, body {
+/*html, body {
     margin: 0;
     font-family: 'Raleway', sans-serif;
-}
-
-.card-image {
-    max-width: 100%;
-    height: auto;
-}
+}*/
