--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
 
+      
+      
       <div class="wrapper ">
         <div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
           <!--
@@ -51,7 +53,7 @@
               </li>
               <li class="nav-item ">
                 <a class="nav-link" href="#">
-                  <i class="material-icons">notifications</i>
+                  <i class="material-icons">mailbox</i>
                   <p>Mailbox</p>
                 </a>
               </li>
@@ -65,65 +67,6 @@
           </div>
         </div>
         <div class="main-panel">
-          <!-- Navbar -->
-          <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
-            <div class="container-fluid">
-              <div class="navbar-wrapper">
-                <a class="navbar-brand" href="#">Dashboard</a>
-              </div>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="navbar-toggler-icon icon-bar"></span>
-                <span class="navbar-toggler-icon icon-bar"></span>
-                <span class="navbar-toggler-icon icon-bar"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end">
-                <form class="navbar-form">
-                  <div class="input-group no-border">
-                    <input type="text" value="" class="form-control" placeholder="Search...">
-                    <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                      <i class="material-icons">search</i>
-                      <div class="ripple-container"></div>
-                    </button>
-                  </div>
-                </form>
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">
-                      <i class="material-icons">dashboard</i>
-                      <p class="d-lg-none d-md-block">
-                        Stats
-                      </p>
-                    </a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="material-icons">notifications</i>
-                      <span class="notification">5</span>
-                      <p class="d-lg-none d-md-block">
-                        Some Actions
-                      </p>
-                    </a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link" href="#pablo" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="material-icons">person</i>
-                      <p class="d-lg-none d-md-block">
-                        Account
-                      </p>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                      <a class="dropdown-item" href="#">Profile</a>
-                      <a class="dropdown-item" href="#">Settings</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Log out</a>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-          <!-- End Navbar -->
           <div class="content">
             <div class="container-fluid">
               <div class="row">
@@ -248,7 +191,7 @@
                               <thead class="text-warning">
                                 <th>First Name</th>
                                 <th>Last Name</th>
-                                <th>Complete</th>
+                                <th>Progress</th>
                                 <th>Degree</th>
                                 <th>Date due</th>
                               </thead>
@@ -334,7 +277,7 @@
                       </div>
                       <div class="card-footer">
                         <div class="stats">
-                          <i class="material-icons">access_time</i> campaign sent 2 days ago
+                          <i class="material-icons">access_time</i> updated 2 days ago
                         </div>
                       </div>
                     </div>
@@ -620,3 +563,4 @@
             </div>
       </div>
 </div>
+
