--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -3,5 +3,16 @@ h1 { font-size: 1.5rem }
 .fill-space {
     /* This fills the remaining space, by using flexbox. 
        Every toolbar row uses a flexbox row layout. */
-    flex: 1 1 auto;
-  }
+    flex: 1 1;
+}
+
+.profile-img {
+   width: 64px;
+   height: auto;
+
+}
+
+.mat-icon {
+   margin-top: 1rem;
+   margin-left: 1rem;
+}
