Add material badges to mailbox icon

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,6 +28,11 @@
                 </a>
               </li>
               <li class="nav-item ">
+                        <a class="nav-link" href="#">
+                          <p><mat-icon matBadge="15" matBadgeColor="warn"><i class="material-icons">mailbox</i></mat-icon><span>Mailbox</span></p>
+                        </a>
+                      </li>
+              <li class="nav-item ">
                 <a class="nav-link" href="#">
                   <i class="material-icons">group_work</i>
                   <p>Lodge Profile</p>
@@ -49,12 +54,6 @@
                 <a class="nav-link" href="#">
                   <i class="material-icons">library_books</i>
                   <p>Education</p>
-                </a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="#">
-                  <i class="material-icons">mailbox</i>
-                  <p>Mailbox</p>
                 </a>
               </li>
               <li class="nav-item ">
@@ -545,7 +544,7 @@
        
 
 
-
+<!--
 <div class="container-fluid p-0">
       <div class="row">
             <div class="col-sm-3 col-sm-6 p-0">
@@ -563,4 +562,4 @@
             </div>
       </div>
 </div>
-
+-->
