Add lodge profile template

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,70 +1,5 @@
-
-      
-      
       <div class="wrapper ">
-        <div class="sidebar" data-color="purple" data-background-color="white" data-image="../assets/img/sidebar-1.jpg">
-          <!--
-            Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
-    
-            Tip 2: you can also add an image using data-image tag
-        -->
-          <div class="logo">
-            <a href="/" class="simple-text logo-normal">
-              .: m a s o n :.
-            </a>
-          </div>
-          <div class="sidebar-wrapper">
-            <ul class="nav">
-              <li class="nav-item active  ">
-                <a class="nav-link" href="#">
-                  <i class="material-icons">dashboard</i>
-                  <p>Dashboard</p>
-                </a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="#">
-                  <i class="material-icons">person</i>
-                  <p>User Profile</p>
-                </a>
-              </li>
-              <li class="nav-item ">
-                        <a class="nav-link" href="#">
-                          <p><mat-icon matBadge="15" matBadgeColor="warn"><i class="material-icons">mailbox</i></mat-icon><span>Mailbox</span></p>
-                        </a>
-                      </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="#">
-                  <i class="material-icons">group_work</i>
-                  <p>Lodge Profile</p>
-                </a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="#">
-                  <i class="material-icons">device_hub</i>
-                  <p>Masonic Network</p>
-                </a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="#">
-                  <i class="material-icons">bubble_chart</i>
-                  <p>Business Network</p>
-                </a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="#">
-                  <i class="material-icons">library_books</i>
-                  <p>Education</p>
-                </a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="#">
-                  <i class="material-icons">language</i>
-                  <p>About</p>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <app-side-nav></app-side-nav>
         <div class="main-panel">
           <div class="content">
             <div class="container-fluid">
