--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,26 +1,44 @@
-<div class="example-container mat-elevation-z8">
-  <div class="example-loading-shade"
-       *ngIf="isLoadingResults">
-    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+  <div class="wrapper">
+      <app-side-nav></app-side-nav>
+      <div class="main-panel">
+        <div class="content">
+          <div class="container-fluid">
+            <div class="row border">
+              <div class="col-sm-12"><h3>Profile</h3></div>
+              <div class="col-sm-12">
+                  <mat-form-field class="example-full-width">
+                      <input matInput placeholder="First name" value="Scott">
+                    </mat-form-field>
+                    <mat-form-field class="example-full-width">
+                        <input matInput placeholder="Last name" value="Wren">
+                    </mat-form-field>
+                    <mat-form-field class="example-full-width">
+                        <input matInput placeholder="Email" value="scott@redhat.com">
+                    </mat-form-field>
+                    <mat-form-field class="example-full-width">
+                        <input matInput placeholder="Phone" value="555-555-5555">
+                    </mat-form-field>
+              </div> 
+              <div class="col-sm-12"><br></div>
+              <div class="col-sm-12">
+                  <mat-tab-group>
+                      <mat-tab label="Entered Apprentice Date"> <strong>6/7/2018</strong> - Pheonix Lodge 364, Sarasota, FL. 
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH0CmVwLlxkQ4NMksUYWmU-UlxLDdOn9QMduPe7GcVHnjCLqsDeA" style="height: 6rem"></mat-tab>
+                      <mat-tab label="Fellow Craft Date"> <strong>6/7/2019</strong> - Venice Lodge, Venice, FL. <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH0CmVwLlxkQ4NMksUYWmU-UlxLDdOn9QMduPe7GcVHnjCLqsDeA" style="height: 6rem"></mat-tab>
+                      <mat-tab label="Master Mason Date"> Awaiting date</mat-tab>
+                    </mat-tab-group>
+              </div>
+              <div class="col-sm-12"><hr></div>
+              <div class="col-sm-12">
+                  <mat-form-field>
+                      <mat-label>Lodge Membership</mat-label>
+                      <mat-select [formControl]="toppings" multiple>
+                        <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+                      </mat-select>
+                    </mat-form-field>
+              </div>
+          </div>        
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="data" class="example-table"
-           matSort matSortActive="prod_name" matSortDisableClear matSortDirection="asc">
-
-      <!-- Product Name Column -->
-      <ng-container matColumnDef="prod_name">
-        <th mat-header-cell *matHeaderCellDef>Product Name</th>
-        <td mat-cell *matCellDef="let row">{{row.name}}</td>
-      </ng-container>
-
-      <!-- Product Price Column -->
-      <ng-container matColumnDef="prod_price">
-        <th mat-header-cell *matHeaderCellDef>Product Price</th>
-        <td mat-cell *matCellDef="let row">{{row.email}}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/product-details/', row.id]"></tr>
-    </table>
-  </div>
-</div>
