Move Lodge office select into profile box in the html. Add Lodge officer label to drop down

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -36,20 +36,20 @@
                         <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
                       </mat-select>
                     </mat-form-field>
+                    <form class="example-form">
+                        <mat-form-field class="example-full-width">
+                          <input matInput placeholder="Lodge Officer" aria-label="Lodge Officer" [matAutocomplete]="auto" [formControl]="stateCtrl">
+                          <mat-autocomplete #auto="matAutocomplete">
+                            <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
+                              <img class="example-option-img" aria-hidden [src]="state.flag" height="25">
+                              <span>{{state.name}}</span> |
+                              <small>Population: {{state.population}}</small>
+                            </mat-option>
+                          </mat-autocomplete>
+                        </mat-form-field>
+                      </form>  
               </div>
           </div> 
-          <form class="example-form">
-              <mat-form-field class="example-full-width">
-                <input matInput placeholder="State" aria-label="State" [matAutocomplete]="auto" [formControl]="stateCtrl">
-                <mat-autocomplete #auto="matAutocomplete">
-                  <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
-                    <img class="example-option-img" aria-hidden [src]="state.flag" height="25">
-                    <span>{{state.name}}</span> |
-                    <small>Population: {{state.population}}</small>
-                  </mat-option>
-                </mat-autocomplete>
-              </mat-form-field>
-            </form>  
         </div>
       </div>
     </div>
