Add lodge positions to drop down box

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -53,7 +53,7 @@
                                     <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
                                       <img class="example-option-img" aria-hidden [src]="state.flag" height="25">
                                       <span>{{state.name}}</span> |
-                                      <small>Population: {{state.population}}</small>
+                                      <small>Position: {{state.position}}</small>
                                     </mat-option>
                                   </mat-autocomplete>
                               </form> 
