Add readonly to degree dates input fields

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -31,13 +31,13 @@
                       <div class="pt-3"></div>
                       <p class="sub-heading">Degree details</p>
                         <mat-form-field class="w-50 pr-5">
-                          <input matInput placeholder="EA Date" value="1/1/2019">
+                          <input matInput placeholder="EA Date" value="1/1/2019" [readonly]="true">
                         </mat-form-field>
                         <mat-form-field class="w-50">
-                          <input matInput placeholder="FC Date" value="1/1/2019">
+                          <input matInput placeholder="FC Date" value="1/1/2019" [readonly]="true">
                         </mat-form-field>
                         <mat-form-field class="w-50 pr-5">
-                          <input matInput placeholder="MM Date" value="1/1/2019">
+                          <input matInput placeholder="MM Date" value="1/1/2019" [readonly]="true">
                         </mat-form-field>
                         <p class="sub-heading pt-4">Lodge details</p>
                         <mat-form-field class="w-50 pr-5">
