--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -51,7 +51,7 @@
                                   <input matInput placeholder="Lodge Officer" aria-label="Lodge Officer" [matAutocomplete]="auto" [formControl]="stateCtrl">
                                   <mat-autocomplete #auto="matAutocomplete">
                                     <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
-                                      <img class="example-option-img" aria-hidden [src]="state.flag" height="25">
+                                      <img class="example-option-img" aria-hidden [src]="state.icon" height="25">
                                       <span>{{state.name}}</span> |
                                       <small>Position: {{state.position}}</small>
                                     </mat-option>
